[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "styledown"
version = "0.2.0"
description = "A tiny Markdown renderer"
requires-python = ">=3.9"
dependencies = ["mistletoe", "pygments", "fastapi", "uvicorn", "pyyaml"]

[project.scripts]
styledown = "styledown:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
styledown = ["styles.css", "template.html"]

[tool.setuptools.packages.find]
where = ["src"]
